--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
-
-  {
+{
     "name": "songlist",
     "version": "1.0.0",
     "private": true,
     "homepage": "https://Gordon0518.github.io/Online-Song-List",
     "scripts": {
-      "start": "node server.js",
-      "build": "cd client && npm install && npm run build",
-      "install-all": "npm install && cd client && npm install"
+        "start": "node server.js",
+        "build": "cd client && npm install && npm run build",
+        "install-all": "npm install && cd client && npm install"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "mongoose": "^8.2.0"
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^6.4.7",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "mongoose": "^8.2.0"
     }
-  }
+}
