--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@emotion/styled": "^11.14.0",
         "@mui/material": "^6.4.7",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "mongoose": "^8.2.0"
     }
